--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ Jinja2==2.9.5
 MarkupSafe==0.23
 packaging==16.8
 py2neo==3.1.2
+PyMySQL==0.7.10
 pyparsing==2.1.10
 six==1.10.0
+uuid==1.30
 visitor==0.1.3
 Werkzeug==0.11.15
 WTForms==2.1
