--- a/package.json
+++ b/package.json
@@ -9,20 +9,32 @@
     "preview": "vite preview",
     "prepare": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest run src",
+    "test:watch": "vitest src",
+    "coverage": "vitest run src --coverage"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.5",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/svelte": "^3.1.3",
+    "babel-jest": "^27.0.0",
+    "bootstrap": "^5.2.0",
+    "cross-env": "^7.0.3",
+    "jest-dom": "^4.0.0",
+    "jsdom": "^20.0.0",
+    "sass": "^1.53.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
+    "svelte-jester": "^2.0.1",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0",
-    "sass": "^1.53.0",
-    "bootstrap": "^5.2.0",
-    "@popperjs/core": "^2.11.5"
+    "vite": "^3.0.3",
+    "vitest": "^0.19.1"
   },
   "type": "module"
 }
