--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/svelte": "^3.1.3",
+    "@types/uuid": "^8.3.4",
     "babel-jest": "^27.0.0",
     "bootstrap": "^5.2.0",
     "cross-env": "^7.0.3",
@@ -44,6 +45,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
-    "svelte-tags-input": "^2.9.2"
+    "svelte-tags-input": "^2.9.2",
+    "uuid": "^8.3.2"
   }
 }
