--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsdom": "^20.0.0",
     "mysql-schema-ts": "^1.9.1",
     "sass": "^1.53.0",
+    "simple-svelte-autocomplete": "^2.4.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-jester": "^2.0.1",
