--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: test
 on: push
 
 jobs:
-  test-lint-build:
+  test:
     env:
       CI: true
     runs-on: ubuntu-latest
@@ -22,3 +22,22 @@ jobs:
 
       - name: Run Unit Tests
         run: npm test
+  check:
+    env:
+      CI: true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: npm
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Run Svelte Check
+        run: npm run check
