--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "svelte-tags-input": "^2.9.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.17.10"
   }
 }
