--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/svelte": "^3.1.3",
+    "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
     "babel-jest": "^27.0.0",
     "bootstrap": "^5.2.0",
@@ -45,6 +46,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "svelte-tags-input": "^2.9.2",
     "uuid": "^8.3.2",
