--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "clean": "rm -rf node_modules .svelte-kit build",
     "package": "svelte-kit package",
     "preview": "vite preview",
-    "prepare": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest run src",
@@ -40,7 +39,7 @@
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.3",
+    "vite": "^3.1.0-beta.1",
     "vitest": "^0.19.1"
   },
   "type": "module",
