--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/svelte": "^3.1.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
     "babel-jest": "^27.0.0",
@@ -44,6 +45,7 @@
   },
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
