--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf node_modules .svelte-kit build",
     "package": "svelte-kit package",
     "preview": "vite preview",
+    "prepare": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest run src",
@@ -23,7 +24,6 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/svelte": "^3.1.3",
-    "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
     "babel-jest": "^27.0.0",
@@ -40,12 +40,11 @@
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^3.1.0-beta.1",
+    "vite": "^3.0.3",
     "vitest": "^0.19.1"
   },
   "type": "module",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
