add firebase & firebaseui for login modal

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DATABASE_URL=mysql://<USERNAME>:<PLAIN_TEXT_PASSWORD>@<ACCESS_HOST_URL>/<DATABASE_NAME>
+PUBLIC_FIREBASE_KEY=changeme
+PUBLIC_FIREBASE_PROJECTID=changeme
+PUBLIC_FIREBASE_APPID=changeme
